tech: add spotless integration